# vfs

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
include/: file.hpp  file_system.hpp  folder.hpp  sha1.hpp
src/: file.cpp  file_system.cpp  folder.cpp  sha1.cpp
test/: test_file.cpp  test_sha1.cpp
